# matsuzawa-20260227-2

./: package-lock.json  pyproject.toml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stderr.txt  stdout.txt
.research/results/baseline-cot/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-ebc3ot/: metrics.json
config/: config.yaml
config/run/: baseline-cot.yaml  proposed-ebc3ot.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
